<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlueTooth TicTacToe</string>
    <string name="action_settings">Settings</string>

    <string name="bSingleP">Multi Player Locally</string>
    <string name="bMultiP">Multi Player Bluetooth</string>
    <string name="bAbout">About</string>
    <string name="bExit">EXIT the Game</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>

    <string name="app_name_singleplayer"> Single Player Game</string>
    <string name="app_name_multiplayer">MultiPlayer Using Bluetooth</string>

    <string name="text_player1"> Player 1</string>
    <string name="text_player2">Player 2</string>
    <string name="click">OK</string>
    <string name="empty">" "</string>
    <string name="bcontinue">Continue...</string>
    <string name="win_text">Wins!!! </string>
    <string name="paireddev">Paired Devices</string>
    <string name="text_about_sandy">
        
        \nSandeep Pareek : MCA-SCI Final Year Student from
        PVG\'s College of Science, Pune.\n
    	Android is his favoirite area of working.\n
    	\tContact: psandeep01@gmail.com\n
    	
    </string>
    <string name="text_about_rajeshree">
        \n\nRajeshree Raut : MCA -SCI Final year Student from 
        PVG\'s college of Science, Pune\n
        Java is her Favourite Area of work.\n
        Contact: rajeshree@raut@yahoo.com\n
    </string>

    <string name="text_about_pawan">Pawan Hegde (h.pawan@gmail.com)</string>

    <string name="player_1_count"></string>
    <string name="player_2_count"></string>
    <string name="draw_count"></string>

</resources>
