<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartupActivity">

    <Button
        android:id="@+id/bSinglePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/bSingleP" />

    <Button
        android:id="@+id/bMultiPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bSinglePlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/bMultiP" />

    <Button
        android:id="@+id/bAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bMultiPlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/bAbout" />

    <Button
        android:id="@+id/bExitGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bAbout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/bExit" />

</RelativeLayout>
