<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/player_2_name"
        android:layout_alignBottom="@+id/player_2_name"
        android:layout_alignLeft="@+id/textView1"
        android:padding="10dp"
        android:text="@string/text_player2" />

    <EditText
        android:id="@+id/player_2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/player_1_name"
        android:layout_below="@+id/player_1_name"
        android:layout_marginTop="24dp"
        android:hint="@string/text_player2"
        android:text="@string/text_player2"></EditText>

    <EditText
        android:id="@+id/player_1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="28dp"
        android:layout_marginTop="36dp"
        android:layout_toRightOf="@+id/textView1"
        android:hint="@string/text_player1"
        android:text="@string/text_player1">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bDialogOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_2_name"
        android:layout_marginTop="28dp"
        android:layout_toRightOf="@+id/textView2"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/click" />

    <TextView
        android1:id="@+id/textView1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/player_2_name"
        android1:layout_alignParentLeft="true"
        android1:padding="10dp"
        android1:text="@string/text_player1" />

</RelativeLayout>

